Test/Nat/Max.expected
Test/Nat/Max.lean:3:4: error: 'Max' has already been declared
Test/Nat/Max.lean:10:38: error: application type mismatch
  Max x
argument
  x
has type
  Nat : Type
but is expected to have type
  Type ?u.141 : Type (?u.141 + 1)
Test/Nat/Max.lean:10:52: error: application type mismatch
  Max x
argument
  x
has type
  Nat : Type
but is expected to have type
  Type ?u.301 : Type (?u.301 + 1)
Test/Nat/Max.lean:12:2: error: incorrect number of universe levels sorryAx
Test/Nat/Max.lean:16:39: error: application type mismatch
  Max x
argument
  x
has type
  Nat : Type
but is expected to have type
  Type ?u.480 : Type (?u.480 + 1)
Test/Nat/Max.lean:16:53: error: application type mismatch
  Max x
argument
  x
has type
  Nat : Type
but is expected to have type
  Type ?u.640 : Type (?u.640 + 1)
Test/Nat/Max.lean:18:2: error: incorrect number of universe levels sorryAx
